--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             
     </div>
 
-    <div class="window" id="filmSelectWindow" style="width: 800px;">
+    <div class="window hidden" id="filmSelectWindow" style="width: 800px;">
         <div class="title-bar">
             <div class="title-bar-text">Filmstrip Settings</div>
                 <div class="title-bar-controls">
