--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
     <div class="ui-desktop" style="left: 0; top: 0;">
 		<div class="recycle-bin ui-icon">
 			<div class="ui-icon-container">
-				<img width="32" height="32" src="recycle_bin_empty_cool-5.png">
+				<img width="32" height="32" src="img/recycle_bin_empty_cool-5.png">
 				<span style="color:white;">Recycle Bin</span>
 			</div>
 		</div>
 		<div class="recycle-bin ui-icon">
 			<div class="ui-icon-container">
-				<img width="32" height="32" src="computer_explorer_cool-5.png">
+				<img width="32" height="32" src="img/computer_explorer_cool-5.png">
 				<span style="color:white;">Computer</span>
 			</div>
 		</div>
 		<div class="recycle-bin ui-icon">
 			<div class="ui-icon-container">
-				<img width="32" height="32" src="directory_closed-3.png">
+				<img width="32" height="32" src="img/directory_closed-3.png">
 				<span style="color:white;">Documents</span>
 			</div>
 		</div>
 		<div class="recycle-bin ui-icon">
 			<div class="ui-icon-container">
 				<a href="https://muchen.ca">
-					<img width="32" height="32" src="html2-1.png">
+					<img width="32" height="32" src="img/html2-1.png">
 					<span style="color:white;">muchen.ca</span>
 				</a>
 			</div>
@@ -45,7 +45,7 @@
     <div class="ui-desktop" style="left:256px; top:128px;">
         <div class="recycle-bin ui-icon">
 			<div class="ui-icon-container">
-				<img width="32" height="32" src="sc3k.png">
+				<img width="32" height="32" src="img/sc3k.png">
 				<span style="color:white;">SimCity 3000</span>
 			</div>
 		</div>
@@ -55,7 +55,7 @@
         <div class="title-bar">
         
           <div class="title-bar-text">
-            <img src="kodak_imaging-1.png"><span class="padded">ContactSheet Generator v0.1</span>
+            <img src="img/kodak_imaging-1.png"><span class="padded">ContactSheet Generator v0.1</span>
         </div>
           <div class="title-bar-controls">
             <!-- <button aria-label="Minimize"></button>
@@ -66,7 +66,7 @@
         </div>
         <div class="window-body">
             <div class="mb-4">
-                <img src="cover.png" style="width:100%" alt="">
+                <img src="img/cover.png" style="width:100%" alt="">
                 <span style="float: right">Original image by Muchen He</span>
             </div>
             <p>
@@ -104,7 +104,7 @@
         <div class="window-body">
             <p>"Upload" a folder of images to generate a contact sheet.</p>
             <div class="my-3">
-                <img src="msg_information-0.png" alt="" style="float: left" class="mr-1">
+                <img src="img/msg_information-0.png" alt="" style="float: left" class="mr-1">
                 <p>For best results, use a folder of images with a consistent aspect ratio (3:2) and keep number of images between 12 to 40.</p>
                 <p>No images will be uploaded to the server. All processing is done locally in your browser.</p>
             </div>
@@ -289,15 +289,15 @@
 		<a href="https://alexmeub.com/old-windows-icons/" title="Start Menu" class="button start-button-wrapper js-start-button" target="_blank">
 			<div class="start-button"></div>
 		</a>
-        <img class="start-bar-icon mr-2 ml-2" src="desktop_old-1.png" alt="">
-        <img class="start-bar-icon mr-2" src="msie2-1.png" "alt="">
+        <img class="start-bar-icon mr-2 ml-2" src="img/desktop_old-1.png" alt="">
+        <img class="start-bar-icon mr-2" src="img/msie2-1.png" "alt="">
 
 		<span class="start-bar-window mx-1">
-            <img class="start-bar-icon mr-2" src="msie2-1.png" alt="">Internet Explorer
+            <img class="start-bar-icon mr-2" src="img/msie2-1.png" alt="">Internet Explorer
         </span>
 
         <span class="start-bar-window active mx-1">
-            <img class="start-bar-icon mr-2" src="kodak_imaging-1.png" alt="">ContactSheet Generator v0.1
+            <img class="start-bar-icon mr-2" src="img/kodak_imaging-1.png" alt="">ContactSheet Generator v0.1
         </span>
 
 	</div>
