--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
             setTimeout(() => {
                 
-                document.getElementById("welcome").classList.add("inactive");
+                // document.getElementById("welcome").classList.add("inactive");
                 document.getElementById("upload").classList.remove("hidden");
                 document.getElementById("welcome-button").classList.remove("p-active");
                 document.body.style.cursor = "default";
@@ -341,7 +341,7 @@
         }
 
         function reset() {
-            document.getElementById("welcome").classList.remove("inactive");
+            // document.getElementById("welcome").classList.remove("inactive");
 
             document.getElementById("upload").classList.add("hidden");
             document.getElementById("uploadProgress").classList.add("hidden");
@@ -352,7 +352,7 @@
         }
 
         function startLoad() {
-            document.getElementById("upload").classList.add("inactive");
+            // document.getElementById("upload").classList.add("inactive");
             document.getElementById("uploadProgress").classList.remove("hidden");
         }
 
