reorganize repo structure

--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Sheet Generator</title>
-    <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://unpkg.com/98.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
     <div class="ui-desktop" style="left: 0; top: 0;">
 		<div class="recycle-bin ui-icon">
 			<div class="ui-icon-container">
@@ -304,18 +301,16 @@
 
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 
     <!-- p5.js -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
 
-    <script src="filmstock_properties.js"></script>
-    <script src="dxcode.js"></script>
-    <script src="contact_sheet.js"></script>
-    <script src="image_loader.js"></script>
-    <script src="interact_window.js"></script>
+    <script src="js/filmstock_properties.js"></script>
+    <script src="js/dxcode.js"></script>
+    <script src="js/contact_sheet.js"></script>
+    <script src="js/image_loader.js"></script>
+    <script src="js/interact_window.js"></script>
     <script>
         function welcome_start() {
             // set welcome button to active state by adding pseudo class
