--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ layout: default
 
 
 <!-- warning dialogue boxes -->
-<div class="window" id="errorDialog">
+<div class="window hidden" id="errorDialog">
     <div class="title-bar">
         <div class="title-bar-text">Placeholder</div>
         <div class="title-bar-controls">
