obj based rendering

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ layout: default
                 <!-- <p>Tip: use the scroll bar to scoll horizontally</p> -->
             </div>
             <div class="pb-2" style="overflow-x: scroll;">
-                <img src="#" alt="" id="filmstripimg" style="max-height: 160px;">
+                <img src="#" alt="" id="filmstripimg">
             </div>
             <!-- <canvas class="my-3" id="p5canvas"></canvas> -->
         </div>
@@ -160,6 +160,7 @@ layout: default
 <!-- p5.js -->
 <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
 
+<script src="js/fonts.js"></script>
 <script src="js/filmstock_properties.js"></script>
 <script src="js/dxcode.js"></script>
 <script src="js/contact_sheet.js"></script>
